--- a/influential-games.html
+++ b/influential-games.html
@@ -3,34 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Influential Games - GameTimeCapsule</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <title>GamingTimeCapsule: Influential Games</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Influential Games</h1>
-        <p>Explore the iconic games that changed the world of gaming!</p>
+        <h1>GamingTimeCapsule</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="timeline.html">Timeline</a></li>
+                <li><a href="influential-games.html">Influential Games</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
         <section>
-            <h2>Game 1: Super Mario Bros. (1985)</h2>
-            <p>Learn how Super Mario Bros. set the foundation for platform games and introduced the world to Mario!</p>
-        </section>
-
-        <section>
-            <h2>Game 2: The Legend of Zelda (1986)</h2>
-            <p>The Legend of Zelda revolutionized the adventure genre and introduced open-world gameplay.</p>
-        </section>
-
-        <section>
-            <h2>Game 3: Doom (1993)</h2>
-            <p>Doom pioneered first-person shooters and online multiplayer gaming.</p>
+            <h2>Influential Games That Changed Gaming</h2>
+            <p>These are the games that shaped the gaming industry and left a lasting legacy on gaming culture.</p>
+            <h3>List of Influential Games:</h3>
+            <ul>
+                <li><strong>Super Mario Bros. (1985)</strong>: Revolutionized the platformer genre and popularized side-scrolling games.</li>
+                <li><strong>The Legend of Zelda (1986)</strong>: Pioneered open-world exploration and puzzle-solving mechanics in action-adventure games.</li>
+                <li><strong>Final Fantasy VII (1997)</strong>: Brought cinematic storytelling and RPG elements to the mainstream.</li>
+                <li><strong>Half-Life (1998)</strong>: Defined the first-person shooter genre with a strong emphasis on narrative and AI-driven gameplay.</li>
+                <li><strong>World of Warcraft (2004)</strong>: Set the standard for massively multiplayer online role-playing games (MMORPGs).</li>
+                <li><strong>Fortnite (2017)</strong>: Changed the battle royale genre and introduced innovative cross-platform play and in-game events.</li>
+            </ul>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 GameTimeCapsule. All rights reserved.</p>
+        <a href="index.html">Back to Home</a>
     </footer>
 </body>
 </html>
