--- a/timeline.html
+++ b/timeline.html
@@ -3,34 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaming Timeline - GameTimeCapsule</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <title>GamingTimeCapsule: Timeline</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Gaming Timeline</h1>
-        <p>Track the key moments in the history of gaming.</p>
+        <h1>GamingTimeCapsule</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="timeline.html">Timeline</a></li>
+                <li><a href="influential-games.html">Influential Games</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <section class="timeline-item">
-            <h3>1985: Super Mario Bros. Released</h3>
-            <p>This iconic game launched the world’s most famous plumber, Mario, and set new standards in platform games.</p>
-        </section>
-
-        <section class="timeline-item">
-            <h3>1993: Doom Changed FPS Games</h3>
-            <p>Doom introduced the world to first-person shooters and online multiplayer, making it a cultural phenomenon.</p>
-        </section>
-
-        <section class="timeline-item">
-            <h3>2001: The Xbox is Launched</h3>
-            <p>Microsoft’s entry into the gaming console market shook up the industry, introducing new multiplayer and online features.</p>
+        <section>
+            <h2>Interactive Gaming History Timeline</h2>
+            <p>Explore the timeline of gaming history and see the key events that shaped the world of video games.</p>
+            
+            <!-- Timeline Container -->
+            <div id="timeline-container"></div> <!-- The timeline items will be dynamically added here -->
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2024 GameTimeCapsule. All rights reserved.</p>
+        <a href="index.html">Back to Home</a>
     </footer>
+
+    <!-- Add script.js file -->
+    <script src="script.js"></script>
 </body>
 </html>
