--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
     <section class="hero" id="home">
         <div class="container">
             <div class="hero-content">
-                <h1>Hello, I'm Joseph</h1>
-                <p>A Senior UI Designer based in Canada.</p>
-                <p>With years of experience and a passion for <strong>cutting-edge design</strong>, I’m committed to
-                    creating impactful user interfaces.</p>
+                <h1>Hello, I'm Jayvein</h1>
+                <p>Welcome to Gaming Time Capsule, a website dedicated to the incredible world of video games.</p>
+                <p>Here, we’ll take a journey through the history of gaming—how it all began with simple pixelated adventures, and how it grew into a global phenomenon shaping culture, technology, and even how we connect with each other.</p>
                 <a href="#projects" class="hero-button">See My Work</a>
             </div>
         </div>
