--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="hero-content">
                 <h1>Hello, I'm Jayvein</h1>
                 <p>Welcome to Gaming Time Capsule, a website dedicated to the incredible world of video games.</p>
-                <p>Here, we’ll take a journey through the history of gaming—how it all began with simple pixelated adventures, and how it grew into a global phenomenon shaping culture, technology, and even how we connect with each other.</p>
+                <p>Here, we’ll explore gaming’s journey from simple pixelated adventures to a global phenomenon shaping culture, technology, and how we connect.</p>
                 <a href="#projects" class="hero-button">See My Work</a>
             </div>
         </div>
@@ -94,42 +94,39 @@
 
     <section id="timeline" class="timeline-section">
         <div class="container">
-            <h2>My Journey</h2>
-            <p>Here are some milestones I’ve achieved over the years:</p>
+            <h2>Gaming Highlights Through the Years</h2>
+            <p>Here are some key achievements in gaming history:</p>
             <div class="timeline">
                 <div class="timeline-item">
-                    <div class="timeline-date">2024</div>
+                    <div class="timeline-date">1958</div>
                     <div class="timeline-content">
-                        <h3>Started My Web Development Journey</h3>
-                        <p>Started learning HTML, CSS, and JavaScript. Took online courses and built my first project.
+                        <h3>Tennis for Two</h3>
+                        <p>The first game designed purely for entertainment, Tennis for Two, was created by physicist William Higinbotham. It simulated a tennis match on an oscilloscope and is considered the origin of video gaming.
                         </p>
                     </div>
                 </div>
 
                 <div class="timeline-item">
-                    <div class="timeline-date">2025</div>
+                    <div class="timeline-date">1980</div>
                     <div class="timeline-content">
-                        <h3>Learned React</h3>
-                        <p>Explored React.js and built my first React application. Learned component-based architecture
-                            and state management.</p>
+                        <h3>Pac-Man</h3>
+                        <p>Namco’s Pac-Man became a cultural icon, introducing characters and gameplay that appealed to all ages. It remains one of the most recognizable and influential games of all time.</p>
                     </div>
                 </div>
 
                 <div class="timeline-item">
-                    <div class="timeline-date">2026</div>
+                    <div class="timeline-date">1996</div>
                     <div class="timeline-content">
-                        <h3>Launched My Portfolio Website</h3>
-                        <p>Built and launched my personal portfolio website showcasing my skills and projects. It was a
-                            great milestone for me.</p>
+                        <h3>Pokémon Red and Blue</h3>
+                        <p>These Game Boy classics launched the Pokémon franchise, captivating players with its "catch ‘em all" mechanic and sparking a global phenomenon.</p>
                     </div>
                 </div>
 
                 <div class="timeline-item">
-                    <div class="timeline-date">2027</div>
+                    <div class="timeline-date">2017</div>
                     <div class="timeline-content">
-                        <h3>Started Contributing to Open Source</h3>
-                        <p>Contributed to open source projects on GitHub. Learned from the community and improved my
-                            coding skills.</p>
+                        <h3>The Legend of Zelda: Breath of the Wild</h3>
+                        <p>This critically acclaimed game redefined open-world gaming with its emphasis on exploration, creativity, and player freedom. It set a new standard for modern gaming experiences.</p>
                     </div>
                 </div>
             </div>
