--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul class="nav-links">
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="./projects.html">Projects</a></li>
+                    <li><a href="./projects.html">Timeline</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -31,7 +31,7 @@
                 <h1>Hello, I'm Jayvein</h1>
                 <p>Welcome to Gaming Time Capsule, a website dedicated to the incredible world of video games.</p>
                 <p>Here, we’ll explore gaming’s journey from simple pixelated adventures to a global phenomenon shaping culture, technology, and how we connect.</p>
-                <a href="#projects" class="hero-button">See My Work</a>
+                <a href="#projects" class="hero-button">Timeline</a>
             </div>
         </div>
     </section>
@@ -164,7 +164,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
+            <p>&copy; 2024 JB. All rights reserved.</p>
         </div>
     </footer>
 
