--- a/projects.html
+++ b/projects.html
@@ -32,24 +32,24 @@
                 <div class="project-card">
                     <img src="https://via.placeholder.com/400x300.png?text=Project+1" alt="Project 1">
                     <div class="project-info">
-                        <h3>Project 1</h3>
-                        <p>A short description of Project 1.</p>
+                        <h3>2001</h3>
+                        <p>Halo: Combat Evolved</p>
                         <a href="#project1-details" class="view-details-btn">View Details</a>
                     </div>
                 </div>
                 <div class="project-card">
                     <img src="https://via.placeholder.com/400x300.png?text=Project+2" alt="Project 1">
                     <div class="project-info">
-                        <h3>Project 2</h3>
-                        <p>A short description of Project 2.</p>
+                        <h3>2004</h3>
+                        <p>World of Warcraft</p>
                         <a href="#project2-details" class="view-details-btn">View Details</a>
                     </div>
                 </div>
                 <div class="project-card">
                     <img src="https://via.placeholder.com/400x300.png?text=Project+3" alt="Project 1">
                     <div class="project-info">
-                        <h3>Project 3</h3>
-                        <p>A short description of Project 3.</p>
+                        <h3>2013</h3>
+                        <p>Grand Theft Auto V</p>
                         <a href="#project3-details" class="view-details-btn">View Details</a>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
 
     <section id="project-details" class="project-details-section">
         <div class="container">
-            <h2>Project Details</h2>
+            <h2>Iconic Games</h2>
                         <div id="project1-details" class="project-detail-card">
                 <h3>2001: Halo: Combat Evolved
                 </h3>
