--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <section id="skills" class="skills-section">
         <div class="container">
-            <h2 class="title">Skills</h2>
+            <h2 class="title">How This Site Was Built</h2>
             <div class="skills-grid">
                 <!-- Skill 1 -->
                 <div class="skill">
