--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
             <h2>Project</h2>
             <div class="portfolio-gallery">
                 <div class="project-card">
-                    <img src="https://via.placeholder.com/400x300.png?text=Project+1" alt="Project 1">
+                    <img src="https://assets2.ignimgs.com/2014/02/14/wow-boss-compilation-wallpaperjpg-dc3b63.jpg" alt="Project 1">
                     <div class="project-info">
                         <h3>2001</h3>
                         <p>Halo: Combat Evolved</p>
